; ModuleID = '/home/carl/AnghaBench/jq/src/extr_jv.c_jv_object_get.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_jv.c_jv_object_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@JV_KIND_OBJECT = common dso_local global i32 0, align 4
@JV_KIND_STRING = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @jv_object_get(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* %3, align 4
  %8 = load i32, i32* @JV_KIND_OBJECT, align 4
  %9 = call i32 @JVP_HAS_KIND(i32 %7, i32 %8)
  %10 = call i32 @assert(i32 %9)
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* @JV_KIND_STRING, align 4
  %13 = call i32 @JVP_HAS_KIND(i32 %11, i32 %12)
  %14 = call i32 @assert(i32 %13)
  %15 = load i32, i32* %3, align 4
  %16 = load i32, i32* %4, align 4
  %17 = call i32* @jvp_object_read(i32 %15, i32 %16)
  store i32* %17, i32** %5, align 8
  %18 = load i32*, i32** %5, align 8
  %19 = icmp ne i32* %18, null
  br i1 %19, label %20, label %24

20:                                               ; preds = %2
  %21 = load i32*, i32** %5, align 8
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @jv_copy(i32 %22)
  store i32 %23, i32* %6, align 4
  br label %26

24:                                               ; preds = %2
  %25 = call i32 (...) @jv_invalid()
  store i32 %25, i32* %6, align 4
  br label %26

26:                                               ; preds = %24, %20
  %27 = load i32, i32* %3, align 4
  %28 = call i32 @jv_free(i32 %27)
  %29 = load i32, i32* %4, align 4
  %30 = call i32 @jv_free(i32 %29)
  %31 = load i32, i32* %6, align 4
  ret i32 %31
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @JVP_HAS_KIND(i32, i32) #1

declare dso_local i32* @jvp_object_read(i32, i32) #1

declare dso_local i32 @jv_copy(i32) #1

declare dso_local i32 @jv_invalid(...) #1

declare dso_local i32 @jv_free(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
